--- a/client/styles/schedule.scss
+++ b/client/styles/schedule.scss
@@ -65,6 +65,7 @@ body{
 
                 .left {
                     width: 30%;
+                    min-width: 120px;
                 }
 
                 .right {
